<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter Search Query</string>
    <string name="search_label">Search</string>
    <string name="image_title">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="search_filter_label">Filter</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="FilterActivityTitle">Advanced Search Options</string>
    <string name="ImageSizeFilter">Image Size</string>
    <string name="ColorFilter">Color Filter</string>
    <string name="ImageTypeFilter">Image Type</string>
    <string name="SiteFilter">Site Filter</string>
    <string name="FilterActivitySaveButton">Save</string>

    <string-array name="image_size">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>

    <string-array name="image_color">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="image_type">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>
